# fullyautobob8.3

./: .gitignore  README.md  copilot-instructions.md  data_harvester.py  install_and_launch_v47.sh  pyproject.toml  requirements.txt
configs/: config.yaml  symbols.yaml
dashboard/: app.py
logs/: events.ndjson
v26meme/: cli.py
v26meme/allocation/: allocator.py  optimizer.py
v26meme/core/: dsl.py  event_store.py  policy.py  regime.py  state.py
v26meme/data/: ccxt_conn.py  regime.py  screener_store.py  universe_screener.py
v26meme/execution/: exchange.py  handler.py  risk.py
v26meme/feeds/: base.py  cryptopanic.py
v26meme/labs/: fieldlab.py  screener_replay.py  simlab.py
v26meme/research/: feature_factory.py  generator.py  genes.py  sentiment_features.py  triage.py
